test/tests/stages/9_functions/valid/no_arguments/multiple_declarations.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[34]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(f)
  (
  void
  )
  ;
  int
  identifier(f)
  (
  void
  )
  ;
  return
  identifier(f)
  (
  )
  ;
  }
  int
  identifier(f)
  (
  void
  )
  {
  return
  const int(3)
  ;
  }
