test/tests/stages/9_functions/invalid_declarations/wrong_parameter_names.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[31]:
  int
  identifier(foo)
  (
  int
  identifier(a)
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(foo)
  (
  const int(3)
  )
  ;
  }
  int
  identifier(foo)
  (
  int
  identifier(x)
  )
  {
  return
  identifier(a)
  ;
  }
